# circuit-commands

./: index.ts  package.json  register.ts  relayer.ts  submit.ts  submit_optimistic_multi.ts  targets.json  test.js
bsc/: bsc.ts  client.ts  encode.ts
rust_decode/: Cargo.toml
rust_decode/src/: main.rs
secr/: client.ts  secr.ts  types.ts
utils/: helpers.ts  typeDecoder.ts  utils.ts
