[package]
name = "decode_justification"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = true }
finality-grandpa = { version = "0.15.0", default-features = true }
scale-info = { version = "2.1.1", default-features = true}
frame-support = { default-features = true, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.21' }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.21' }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.21' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.21' }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.21' }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
hex-literal = "0.3.4"
parity-scale-codec-derive = "3.1.3"